compile sass and export as single css file
