# swagger.yaml
@@ -84,6 +84,24 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /sessions/{sessionId}/css:
+    get:
+      x-swagger-router-controller: Sessions
+      description: Get compiled CSS output
+      operationId: getCSSOutput
+      parameters:
+        - name: sessionId
+          in: path
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            type: "file"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
 definitions:
   ErrorResponse:
     required:
